--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Lasagna</h1>
 
-    <img src="./images/lasagna.jpeg">
+    <img src="../images/lasagna.jpg">
 
     <h2>Description</h2>
     <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable, so you can easily alter the ingredient list to suit your needs. </p>
